Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123931

With gstreamer as backend, playing mp4 file resulted in internal data stream error

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • None
    • 6.8.0
    • Multimedia
    • Linux/Wayland, Linux/X11
    • 8da0d2f87 (dev), 8139d4871 (6.7)

    Description

      When attempting to run the mediaplayer example utilizing GStreamer as the multimedia backend to open and play an MP4 file, an internal data stream error occurs.

      The GStreamer error log indicates:

      ERROR       vaapivideomemory gstvaapivideomemory.c:254:map_vaapi_memory: failed to make image current
      ERROR                default video-frame.c:168:gst_video_frame_map_id: failed to map video frame plane 0

      Steps to Reproduce:

      1. Open the "mediaplayer" example project in Qt.
      2. Open an MP4 file.
      3. Play the media file.

      Expected Result: The media file plays without any issues.

      Actual Result: The file fails to play, accompanied by an internal data stream error from GStreamer.

      Workaround: Removing the gstreamer1.0-vaapi package serves as a workaround:
      sudo apt remove gstreamer1.0-vaapi

      As per the Ubuntu bugtracker suggestion located at https://bugs.launchpad.net/ubuntu/+source/gstreamer-vaapi/+bug/1971463, the solution involves removing the gstreamer1.0-vaapi package.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            timblechmann tim blechmann
            jithin.nair Jithin Nair
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change