GStreamer: Rank down the gstreamer-vaapi plugins

Gstreamer-vaapi plugins not working while selecting driver as iHD.
Vaapi plugins are disabled from gstreamer release 1.22.0 and suggested
to use va plugins instead. Ranked down gstreamer-vaapi plugins if
Gstreamer version is less than 1.22

Task-number: QTBUG-123931
Pick-to: 6.5
Change-Id: I98965cda299394665947e0453699299e0320709d
Reviewed-by: Tim Blechmann <tim@klingt.org>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 8da0d2f87a2398fdeeb1ec754fbc1f537464c7c3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>