src/plugins/multimedia/gstreamer/qgstreamerintegration.cpp
@@ -25,6 +25,33 @@ QGstreamerIntegration::QGstreamerIntegration()
 {
     gst_init(nullptr, nullptr);
     qCDebug(lcGstreamer) << "Using gstreamer version: " << gst_version_string();
+
+    if constexpr (!GST_CHECK_VERSION(1, 22, 0)) {
+        GstRegistry* reg = gst_registry_get();
+        const auto pluginNames = {
+            "vaapidecodebin",
+            "vaapih264dec",
+            "vaapih264enc",
+            "vaapih265dec",
+            "vaapijpegdec",
+            "vaapijpegenc",
+            "vaapimpeg2dec",
+            "vaapipostproc",
+            "vaapisink",
+            "vaapivp8dec",
+            "vaapivp9dec"
+        };
+
+        for (auto name : pluginNames) {
+            QGstPluginFeatureHandle pluginFeature {
+                gst_registry_lookup_feature(reg, name),
+                QGstPluginFeatureHandle::HasRef,
+            };
+            if (pluginFeature) {
+                gst_plugin_feature_set_rank(pluginFeature.get(), GST_RANK_PRIMARY - 1);
+            }
+        }
+    }
 }
 
 QPlatformMediaFormatInfo *QGstreamerIntegration::createFormatInfo()
